# password-manager

./: .digital_locket_settings  .gitignore  LICENSE  README.md  lock_my_stuffs.py  main.py  pyproject.toml  reveal_my_stuffs.py
app/core/: config.py  lifespan.py  state.py
app/dependencies/: auth.py  cryptography.py  secured_vault.py
app/routers/: auth.py
app/services/: argon2_logic_service.py  auth_service.py  cryptography_service.py  key_derivation_service.py  locking_service.py  orchestrator_service.py  unlocking_service.py  validation_service.py
the_vault/: master.vault
unlock_secrets/: place_holder_file.md
