[project]
name = "plug-and-play-password-manager"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cachetools>=7.1.4",
    "cryptography>=48.0.1",
    "fastapi>=0.137.2",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
